# Infernal-machines-Silent-movie

./: Untitled.anim
CanadianExperienceLib/: Actor.cpp  Actor.h  CMakeLists.txt  Drawable.h  HaroldFactory.cpp  MachineAdapter.cpp  MachineAdapter.h  MachineDlg.cpp  MachineDlg.h  MainFrame.h  Picture.cpp  Picture.h  PictureFactory.cpp  StartFrame.cpp  StartFrame.h  Timeline.cpp  Timeline.h  ViewEdit.cpp  ViewEdit.h
MachineLib/: ActualMachine.cpp  ActualMachine.h  Arm.cpp  Arm.h  CMakeLists.txt  Component.cpp  Component.h  Gear.cpp  Gear.h  Lever.cpp  Lever.h  Machine1Factory.cpp  Machine1Factory.h  Machine2Factory.cpp  Machine2Factory.h  MachineFactory.cpp  MachineFactory.h  Motor.cpp  Motor.h  Notes  Piston.cpp  Piston.h  PositionSink.cpp  PositionSink.h  PositionSource.cpp  PositionSource.h  Rod.cpp  Rod.h  RodSink.cpp  RodSink.h  RodSource.cpp  RodSource.h  RotationSink.cpp  RotationSink.h  RotationSource.cpp  RotationSource.h  Shape.cpp  Shape.h  Sink.cpp  Sink.h  (+2 more)
Tests/: PictureTest.cpp  TimelineTest.cpp
resources/xrc/: main.fbp  main.xrc
